# adhd

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DECISION_REPORT.md  IDENTITY.md  Makefile  README.md  SPEC.md  tarpaulin-report.json
.claude/: settings.local.json
.github/: .release-please-manifest.json  copilot-instructions.md  release-please-config.json
.github/workflows/: ci.yml  longmemeval-oracle.yml  release-assets.yml  release-please.yml
docs/: 2026-03-26-benchmark-phase3-run2.json
scripts/: install.sh  run_longmemeval_oracle.sh
skills/ice/: SKILL.md
skills/persona/: SKILL.md
src/: adapters.rs  benchmark.rs  claude_install.rs  codex.rs  config.rs  continuity.rs  dispatch.rs  dogfood.rs  embedding.rs  engine.rs  goose_install.rs  http.rs  lib.rs  longmemeval.rs  main.rs  managed_clients.rs  market_head.rs  mcp.rs  model.rs  opencode_install.rs  openhands_install.rs  query.rs  storage.rs  telemetry.rs
src/benchmark/: meta_analysis.rs  mod.rs  phase3.rs  runner.rs  survival.rs
src/continuity/: helpers.rs  interface.rs  kernel.rs  mod.rs  schema.rs  types.rs
tests/: claude_code_global_cli.rs  codex_global_cli.rs  dispatch_cli.rs  goose_global_cli.rs  mcp_stdio.rs  opencode_global_cli.rs  openhands_global_cli.rs
