[package]
name = "ice"
version = "0.3.2-public-beta"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Infinite Context Engine prototype"

[lib]
name = "ice"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
prometheus-client = "0.24"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled-full", "chrono", "serde_json", "trace", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "0.33"
thiserror = "2.0"
tokio = { version = "1.50", features = ["macros", "process", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tempfile = "3.27"
uuid = { version = "1.22", features = ["serde", "v7"] }
zstd = "0.13"
json5 = "0.4"

[dev-dependencies]
